--- a/solutions/day-01/30DaysOfJS/index.html
+++ b/solutions/day-01/30DaysOfJS/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>30DaysOfqJavaScript:Inline Script</title>
+        <script>
+            console.log("30DaysOfqJavaScript:Inline Script")
+        </script>
     </head>
-    <body>
-        <button onclick="alert(alert('Welcome to 30DaysOfqJavaScript'))">Click</button>
-    </body>
+    <body></body>
 </html>
