--- a/solutions/day-01/30DaysOfJS/index.html
+++ b/solutions/day-01/30DaysOfJS/index.html
@@ -2,9 +2,7 @@
 <html>
     <head>
         <title>30DaysOfqJavaScript:Inline Script</title>
-        <script>
-            console.log("30DaysOfqJavaScript:Inline Script")
-        </script>
+        <script src="./introduction.js"></script>
     </head>
     <body></body>
 </html>
