Multiple External Script

--- a/solutions/day-01/30DaysOfJS/index.html
+++ b/solutions/day-01/30DaysOfJS/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>30DaysOfqJavaScript:Inline Script</title>
         <script src="./introduction.js"></script>
+        <script src="./HelloWorld.js"></script>
     </head>
     <body></body>
 </html>
