--- a/solutions/day-02/index.html
+++ b/solutions/day-02/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>30 Days Of React Challenge</title>
   </head>
 
   <body>
@@ -31,7 +32,7 @@
         fontFamily: 'Helvetica Neue',
         padding: 25,
         lineHeight: 1.5,
-      }
+      } 
       const header = (
         <header style={headerStyles}>
           <h1>Welcome to 30 Days Of React</h1>
